...
            android:layout_height="wrap_content"
            android:text="England"
            card_view:layout_constraintBottom_toBottomOf="@+id/text_view_country_tag"
            card_view:layout_constraintStart_toEndOf="@+id/text_view_country_tag" />

        <ImageView
            android:id="@+id/image_view_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/circle_image_view_team_badge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/circle_image_view_team_badge"
            card_view:srcCompat="@drawable/ic_baseline_star_border" />
...
